--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -4,6 +4,12 @@
 *{
   box-sizing: border-box;
 }
+
+:root {
+  font-size: 16px; /* 루트 요소의 폰트 크기를 16px로 정의 */
+}
+
+
 a{
   color: inherit;
   text-decoration: none;
