--- a/src/scss/sign-in.scss
+++ b/src/scss/sign-in.scss
@@ -1,34 +1,33 @@
 
 @import "common";
 
-.sign-in-full-screen{
-  width: 100%; height: 100vh;
+$font-size: 16px;
 
-  background-image: url("./img/UserLoginBackGround.png");
-  background-repeat: no-repeat;
+.sign-in-full-screen{
+  width: 100%;
+
+  background: url("./img/UserLoginBackGround.png");
+  /*background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position: center;*/
 
   .sign-in-background{
-    display: flex;
-    justify-content: center; align-content: center;
-
     position: relative;
 
-    width: 100%; height: 100vh;
+    width: 100%;
+    padding: 14rem 0;
+
     background: linear-gradient(225deg, rgba(255,161,74,0.5) 0%, rgba(29,231,122,0.5) 100%);
 
     // sign-up button
     .user-sign-up-move-button{
-      display: flex; justify-content: center; align-items: center;
-
       background: #ffffff30;
       border: 5px solid #ffffff; border-radius: 20px;
 
-      color: #ffffff;
-      font-size: 36px; font-weight: bold;
+      color: #ffffff; text-align: center;
+      font-size: 2.5rem; font-weight: bold;
 
-      padding: 20px; margin: 45px;
+      margin: 2.5rem; padding: 1.2rem;
 
       position: absolute;
       top: 0; right: 0;
@@ -36,28 +35,24 @@
 
     // sign-in
     .user-sign-in-modal{
+      width: 40%;
+      margin: 0 auto; padding: 3rem 3rem 5rem;
 
       background: #ffffff90;
       border: 5px solid #ffffff; border-radius: 20px;
 
-      padding: 75px 45px;
-
       .LONI-QUIZ-logo{
-        width: 225px;
-        height: 160px;
+        width: 225px; height: 160px;
         background: url("./img/LOINQUIZ_logo.png") no-repeat;
+
+        margin: 0 auto;
       }
 
       .sign-in-items{
-        width: 100%;
-        //height: 10%;
-        //background: #ff7575;
-
-        margin: 30px 0;
-
         display: flex;
         flex-flow: column wrap;
-        //justify-content: space-between;
+
+        margin-top: 2rem;
 
         .sign-in-id-item
         , .sign-in-password-item{
@@ -67,7 +62,8 @@
 
           border-radius: 10px;
 
-          padding: 10px;
+          margin-bottom: 1rem;
+          padding: 1rem;
 
           display: flex;
           flex-flow: row nowrap;
@@ -79,37 +75,59 @@
 
         }
 
+        .auto-sign-in-check{
+          font-size: 1.2rem;
+
+          display: flex; align-items: center;
+
+          svg{
+            width: 1.5rem; height: 1.5rem;
+            margin-right: 0.7rem;
+          }
+        }
+
       }
 
       .sign-in-buttons{
-        background: #61dafb;
-        width: 100%; height: 10vh;
+        height: 12rem;
+
+        margin-top: 3rem;
+
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: space-between;
 
         .loni-quiz-sign-in-button{
-
-          background: #FEE500;
-          height: 90px;
+          background: linear-gradient(225deg, rgba(255,161,74,1) 10%, rgba(29,231,122,1) 100%);
           border-radius: 12px;
 
-          display: flex;
-          justify-content: center; align-items: center;
+          //margin: 0 auto;
+          padding: 1.5rem 2rem;
 
-          font-size: 30px;
-
-        }
-        .kakao-sign-in-button{
-          background: #FEE500;
-          height: 90px;
-          border-radius: 12px;
-
-          display: flex;
-          justify-content: center; align-items: center;
-
+          text-align: center;
           font-size: 30px;
 
           img{
             height: 30px;
+            margin-right: 1rem;
           }
+
+        }
+        .kakao-sign-in-button{
+          background: #FEE500;
+          border-radius: 12px;
+
+          //margin: 1rem auto;
+          padding: 1.5rem 2rem;
+
+          text-align: center;
+          font-size: 30px;
+
+          img{
+            height: 30px;
+            margin-right: 1rem;
+          }
+
         }
 
       }
@@ -118,4 +136,10 @@
 
   }
 
+}
+
+@media (max-width: 1500px) {
+  .sign-in-full-screen {
+    width: 1500px;
+  }
 }
