--- a/src/scss/sign-in.scss
+++ b/src/scss/sign-in.scss
@@ -57,33 +57,38 @@ $font-size: 16px;
         .sign-in-id-item
         , .sign-in-password-item{
           width: 100%;
-
-          background: #ffffff;
-
-          border-radius: 10px;
-
           margin-bottom: 1rem;
           padding: 1rem;
 
+          background: #ffffff;
+          border-radius: 10px;
+
           display: flex;
           flex-flow: row nowrap;
-          justify-content: space-between;
+          //justify-content: space-between;
 
           svg{
-            width: 45px; height: 45px;
+            width: 51px; height: 45px;
+            padding-right: 1rem;
+          }
+
+          input{
+            font-size: 1.5rem;
           }
 
         }
 
         .auto-sign-in-check{
-          font-size: 1.2rem;
+          font-size: 1.2rem; font-weight: bold;
+          color: #9e9e9e;
 
           display: flex; align-items: center;
 
           svg{
             width: 1.5rem; height: 1.5rem;
-            margin-right: 0.7rem;
+            margin-right: 0.5rem;
           }
+
         }
 
       }
@@ -104,12 +109,14 @@ $font-size: 16px;
           //margin: 0 auto;
           padding: 1.5rem 2rem;
 
-          text-align: center;
+          display: flex;
+          align-items: center; justify-content: center;
+
           font-size: 30px;
 
           img{
             height: 30px;
-            margin-right: 1rem;
+            padding-right: 1rem;
           }
 
         }
@@ -120,12 +127,14 @@ $font-size: 16px;
           //margin: 1rem auto;
           padding: 1.5rem 2rem;
 
-          text-align: center;
+          display: flex;
+          align-items: center; justify-content: center;
+
           font-size: 30px;
 
           img{
             height: 30px;
-            margin-right: 1rem;
+            padding-right: 1rem;
           }
 
         }
