--- a/src/scss/SignInModal.scss
+++ b/src/scss/SignInModal.scss
@@ -19,26 +19,12 @@ $font-size: 16px;
 
     background: linear-gradient(225deg, rgba(255,161,74,0.7) 0%, rgba(29,231,122,0.7) 100%);
 
-    // sign-up button
-    .user-sign-up-move-button{
-      background: #ffffff30;
-      border: 5px solid #ffffff; border-radius: 20px;
-
-      color: #ffffff; text-align: center;
-      font-size: 2.5rem; font-weight: bold;
-
-      margin: 2.5rem; padding: 1.2rem;
-
-      position: absolute;
-      top: 0; right: 0;
-    }
-
     // sign-in
     .user-sign-in-modal{
-      width: 40%;
+      width: 40rem;
       margin: 0 auto; padding: 3rem 3rem 5rem;
 
-      background: #ffffff90;
+      background: #ffffff30;
       border: 5px solid #ffffff; border-radius: 20px;
 
       .LONI-QUIZ-logo{
@@ -49,10 +35,10 @@ $font-size: 16px;
       }
 
       .sign-in-items{
-        display: flex;
-        flex-flow: column wrap;
+        margin-top: 2.5rem;
 
-        margin-top: 2rem;
+        display: flex; flex-flow: row wrap;
+        justify-content: space-between;
 
         .sign-in-id-item
         , .sign-in-password-item{
@@ -90,20 +76,31 @@ $font-size: 16px;
 
         }
 
+        .user-sign-up-move-link{
+          text-decoration: none; outline: none; border: none;
+
+          font-size: 1.3rem; font-weight: bold; color: #333333;
+        }
+
       }
 
       .sign-in-buttons{
-        height: 12rem;
         margin-top: 3rem;
 
         display: flex; flex-flow: column wrap;
-        justify-content: space-between;
+
+        .sign-in-error-message {
+          color: #ff2e2e;
+          //display: none;
+        }
 
         .loni-quiz-sign-in-button
         , .kakao-sign-in-button {
           background: linear-gradient(225deg, rgba(255,161,74,1) 10%, rgba(29,231,122,1) 100%);
           border-radius: 12px;
 
+          width: 100%;
+          margin-bottom: 1rem;
           padding: 1.5rem 2rem;
 
           display: flex;
