--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -9,11 +9,9 @@
   font-size: 16px; /* 루트 요소의 폰트 크기를 16px로 정의 */
 }
 
-
 a{
-  color: inherit;
   text-decoration: none;
-
+  outline: none; border: none;
 }
 .clearfix::after{
   content: ''; display: block; clear: both;
