주말에도 메인은 만들어진다...

--- a/src/main/scss/Header.scss
+++ b/src/main/scss/Header.scss
@@ -4,9 +4,10 @@
   justify-content: center;
 }
 .h-box{
-  background: #61dafb;
+  background: #393939;
   width: 100%;
   display: flex;
+  opacity: 0.8;
 }
 li{
   list-style-type: none;
