--- a/src/main/scss/Main.scss
+++ b/src/main/scss/Main.scss
@@ -1,5 +1,25 @@
 body{
-  background: #B0D3D3;
+  background: #ffffff;
+}
+
+.container{
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  position: relative;
+  z-index: 1;
+}
+.container:after{
+  width: 100%;
+  height: 100%;
+  content: "";
+  position: absolute;
+  background-image: url(https://image.civitai.com/xG1nkqKTMzGDvpLrqFT7WA/f415ba1e-a5e8-49d9-b6a6-e61a7fc1c0cb/original=true/00082-1390529945-breakdomainrealistic_R2333-vae-ft-mse-840000-b3c6b014.jpeg);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  opacity: 0.8;
 }
 .main-box{
   display: flex;
@@ -12,24 +32,15 @@ body{
   flex-direction: column;
   align-items: center;
 }
-.r-g{
-  width: 50%;
-}
-
-.t-img{
-  display: flex;
-  justify-content: space-around;
-  margin-top: 3.3em;
-}
 
 .logo{
   color: white;
-  font-size: 200px;
+  font-size: 100px;
 }
 
 p{
   color: white;
-  font-size: 45px;
+  font-size: 30px;
   width: 870px;
   margin-bottom: 3em;
 }
@@ -38,7 +49,7 @@ p{
 }
 
 // 반응형
-@media screen and (max-width: 2100px) {
+@media screen and (max-width: 1430px) {
   .r-g{
     display: none;
   }
@@ -48,7 +59,7 @@ p{
   }
 }
 
- // 메인페이지 이미지 hover 기능
+ // 이미지 hover 기능
 .box-wrap {
   margin-top: 50px;
   display: flex;
@@ -126,4 +137,15 @@ p{
   text-overflow: ellipsis;
   width: 100%;
   text-transform: uppercase;
+}
+
+//테스트
+.img1{
+  width: 500px;
+  height: 500px;
+}
+.img1 img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
