--- a/src/main/scss/Main.scss
+++ b/src/main/scss/Main.scss
@@ -13,7 +13,6 @@ body{
   width: 100%;
   height: 100%;
   content: "";
-  position: absolute;
   background-image: url(https://image.civitai.com/xG1nkqKTMzGDvpLrqFT7WA/f415ba1e-a5e8-49d9-b6a6-e61a7fc1c0cb/original=true/00082-1390529945-breakdomainrealistic_R2333-vae-ft-mse-840000-b3c6b014.jpeg);
   position: absolute;
   top: 0;
@@ -148,4 +147,27 @@ p{
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+//
+.content-box{
+  margin-bottom: 80px;
+}
+
+// bottom-box
+.bottom-box{
+  width: 100%;
+  height: 70%;
+  text-align: center;
+  position: relative;
+  z-index: 1;
+}
+.bottom-box{
+  width: 100%;
+  height: 100%;
+  content: "";
+  background-image: url(https://image.civitai.com/xG1nkqKTMzGDvpLrqFT7WA/932b2694-3e14-4c9a-a9a5-822f630fa050/original=true/00192-1996601262.jpeg);
+  position: absolute;
+  z-index: -1;
+  opacity: 0.7;
 }
