--- a/src/main/scss/Main.scss
+++ b/src/main/scss/Main.scss
@@ -49,12 +49,22 @@ p{
 
 // 반응형
 @media screen and (max-width: 1430px) {
-  .r-g{
-    display: none;
-  }
   .main-box{
     justify-content: center;
     align-items: center;
+  }
+}
+@media screen and (max-width: 885px) {
+  .img-3{
+    display: none;
+  }
+  .img-2{
+    display: none;
+  }
+}
+@media screen and (max-width: 1315px) {
+  .img-3{
+    display: none;
   }
 }
 
@@ -138,36 +148,32 @@ p{
   text-transform: uppercase;
 }
 
-//테스트
-.img1{
-  width: 500px;
-  height: 500px;
-}
-.img1 img{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-//
 .content-box{
   margin-bottom: 80px;
+}
+
+.content-title{
+  margin-top: 70px;
+  text-align: center;
+  font-size: 43px;
 }
 
 // bottom-box
 .bottom-box{
   width: 100%;
-  height: 70%;
+  height: 120%;
   text-align: center;
   position: relative;
   z-index: 1;
 }
-.bottom-box{
+.bottom-box:after{
   width: 100%;
-  height: 100%;
+  height: 127%;
   content: "";
   background-image: url(https://image.civitai.com/xG1nkqKTMzGDvpLrqFT7WA/932b2694-3e14-4c9a-a9a5-822f630fa050/original=true/00192-1996601262.jpeg);
   position: absolute;
+  top: 0;
+  left: 0;
   z-index: -1;
-  opacity: 0.7;
+  opacity: 0.8;
 }
