--- a/src/component/css/GameLobby.css
+++ b/src/component/css/GameLobby.css
@@ -21,13 +21,23 @@ textarea {
     outline: none;
 }
 
+.input-group #message {
+    width: 100%;
+    height: 40px;
+    border-top-color: #FFFFFF;
+    border-left-color: #FFFFFF;
+    border-right-color: #FFFFFF;
+    border-bottom-color: #E5E5E5;
+    resize: none;
+}
+
 #chat-page {
     position: relative;
     height: 100%;
 }
 
 .chat-container {
-    height: 450px;
+    height: 350px;
     margin-left: auto;
     margin-right: auto;
     background-color: #fff;
@@ -48,18 +58,18 @@ textarea {
 }
 
 /* 스크롤 바 디자인 CSS */
-ul::-webkit-scrollbar {
+::-webkit-scrollbar {
     display: block;
     width: 5px;
 }
-ul::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
     background-color: transparent;
 }
-ul::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background-color: #5E6578;
 }
-ul::-webkit-scrollbar-button {
+::-webkit-scrollbar-button {
     width: 0;
     height: 0;
 }
