리스트 DB연결 완료
채팅 구역이랑 방 리스트 구역 분리해둠.
- 할일
  [page 를 3개까지 나누어서 1페이지당 리스트 6개는 나와 있어야 함.]
  [ SCSS 디자인 수정해야함.]

--- a/src/component/scss/GameLobby.scss
+++ b/src/component/scss/GameLobby.scss
@@ -38,9 +38,10 @@ body {
       background-origin: border-box;
       animation: huerotate 6s infinite linear;
       img {
-        width: 150px;
-        height: 150px;
+        width: 100%;
+        height: 100%;
         border-radius: 100px;
+        object-fit: cover;
       }
     }
 
