--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -22,7 +22,7 @@ html,body{
 .show-img{
   flex: 8;
   width: 100%;
-  background: red;
+  background: skyblue;
   position: relative;
   display: flex;
   align-items: center;
@@ -52,6 +52,8 @@ html,body{
   bottom: 20px;
 }
 .img{
-  width: 80%;
-  height: 80%;
+  width: 300px;
+  height: 300px;
+  border: 1px solid black;
+  margin-right: 30px;
 }
