--- a/src/scss/Join.scss
+++ b/src/scss/Join.scss
@@ -5,32 +5,46 @@
   font-family: 'Jua', sans-serif;
 }*/
 
-.join-main-content{
-  display: flex; flex-flow: row nowrap;
-  margin: 75px auto 0;
+.join-screen{
+  display: flex; justify-content: center;
+  padding: 8rem;
 
-  .left-login-move{
-      width: 350px;
-      border: 1px solid #D9D9D9;
-      border-radius: 10px 0 0 10px;
-      padding: 1rem;
+  .join-main-content{
+    display: flex; flex-flow: row nowrap;
+    margin: 75px 20px 0;
 
-    .if-login-can-user {
-      display: flex; flex-flow: column wrap;
-      justify-content: space-between;
+    .left-login-move{
+        width: 350px;
+        border: 1px solid #D9D9D9;
+        border-radius: 10px 0 0 10px;
+        padding: 1rem;
+
+      .if-login-can-user {
+        display: flex; flex-flow: column wrap;
+        justify-content: space-between;
+      }
+
     }
 
-  }
+    .join-right-input-modal{
+      border: 1px solid #D9D9D9;
+      border-radius: 0 10px 10px 0;
+      width: 450px;
+      padding: 1rem;
 
-  .join-right-input-modal{
-    border: 1px solid #D9D9D9;
-    border-radius: 0 10px 10px 0;
-    width: 450px;
-    padding: 1rem;
+      .join-input-profile-item{
+        background: #D9D9D9;
+        border-radius: 50%;
+        width: 10rem; height: 10rem;
 
-    .join-input-item{
-      display: flex;
-      flex-flow: column wrap;
+        display: flex; justify-content: center; align-items: center;
+        overflow: hidden;
+      }
+
+      .join-input-item{
+        display: flex;
+        flex-flow: column wrap;
+      }
     }
   }
 }
