--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -12,6 +12,7 @@
 a{
   text-decoration: none;
   outline: none; border: none;
+  color: inherit;
 }
 .clearfix::after{
   content: ''; display: block; clear: both;
