--- a/src/scss/Join.scss
+++ b/src/scss/Join.scss
@@ -1,27 +1,57 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
-
+//@import "common";
 /*body{
   font-family: 'Jua', sans-serif;
 }*/
 
 .join-screen{
-  display: flex; justify-content: center;
-  padding: 8rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 1rem 0;
 
   .join-main-content{
-    display: flex; flex-flow: row nowrap;
-    margin: 75px 20px 0;
+    display: flex;
+    //flex-flow: row nowrap;
+    //margin: 75px 20px 0;
 
     .left-login-move{
-        width: 350px;
-        border: 1px solid #D9D9D9;
-        border-radius: 10px 0 0 10px;
-        padding: 1rem;
+        width: 28rem;
+        padding: 2rem;
+
+        background: #000;
+        border: 1px solid #D9D9D9; border-radius: 10px 0 0 10px;
+
+        display: flex; flex-flow: column wrap;
+        justify-content: space-between;
+
+      .join-introductory-article{
+        color: #ffffff;
+
+        .h1-join-title{
+          font-weight: bold;
+          font-size: 2rem;
+        }
+
+        .h2-join-sub-title{
+          margin-top: 1rem;
+        }
+
+      }
 
       .if-login-can-user {
         display: flex; flex-flow: column wrap;
         justify-content: space-between;
+        color: #ffffff;
+
+        .login-link-move{
+          text-decoration: none;
+          outline: none;
+          color: #3FFEAE; font-weight: bold;
+          font-size: 1.2rem;
+        }
+
       }
 
     }
@@ -29,8 +59,8 @@
     .join-right-input-modal{
       border: 1px solid #D9D9D9;
       border-radius: 0 10px 10px 0;
-      width: 450px;
-      padding: 1rem;
+      width: 30rem;
+      padding: 2rem;
 
       .join-input-profile-item{
         background: #D9D9D9;
@@ -41,9 +71,13 @@
         overflow: hidden;
       }
 
-      .join-input-item{
-        display: flex;
-        flex-flow: column wrap;
+      .join-input-items{
+        margin: 2rem 0;
+
+        .join-input-item{
+          display: flex; flex-flow: column wrap;
+
+        }
       }
     }
   }
