--- a/src/scss/Join.scss
+++ b/src/scss/Join.scss
@@ -6,80 +6,21 @@
 }*/
 
 .join-screen{
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  padding: 1rem 0;
+  width: 100%; height: 100vh;
+  padding: 2rem 0;
+  display: flex; justify-content: center;
+  background: #000;
+  /*background-image: url("./img/background-img.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;*/
 
   .join-main-content{
     display: flex;
     //flex-flow: row nowrap;
     //margin: 75px 20px 0;
 
-    .left-login-move{
-        width: 28rem;
-        padding: 2rem;
 
-        background: #000;
-        border: 1px solid #D9D9D9; border-radius: 10px 0 0 10px;
-
-        display: flex; flex-flow: column wrap;
-        justify-content: space-between;
-
-      .join-introductory-article{
-        color: #ffffff;
-
-        .h1-join-title{
-          font-weight: bold;
-          font-size: 2rem;
-        }
-
-        .h2-join-sub-title{
-          margin-top: 1rem;
-        }
-
-      }
-
-      .if-login-can-user {
-        display: flex; flex-flow: column wrap;
-        justify-content: space-between;
-        color: #ffffff;
-
-        .login-link-move{
-          text-decoration: none;
-          outline: none;
-          color: #3FFEAE; font-weight: bold;
-          font-size: 1.2rem;
-        }
-
-      }
-
-    }
-
-    .join-right-input-modal{
-      border: 1px solid #D9D9D9;
-      border-radius: 0 10px 10px 0;
-      width: 30rem;
-      padding: 2rem;
-
-      .join-input-profile-item{
-        background: #D9D9D9;
-        border-radius: 50%;
-        width: 10rem; height: 10rem;
-
-        display: flex; justify-content: center; align-items: center;
-        overflow: hidden;
-      }
-
-      .join-input-items{
-        margin: 2rem 0;
-
-        .join-input-item{
-          display: flex; flex-flow: column wrap;
-
-        }
-      }
-    }
   }
 }
 
