--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -11,12 +11,12 @@ html,body{
 }
 .a{
   background: white;
-  flex: 7.3;
+  flex: 7.5;
   display: flex;
   flex-direction: column;
 }
-.b{
-  flex: 2.7;
+.chat{
+  flex: 2.5;
   background: #fff9f9;
 }
 .show-img{
@@ -56,4 +56,20 @@ html,body{
   height: 300px;
   border: 1px solid black;
   margin-right: 30px;
+}
+.chat-log{
+  width: 100%;
+  height: 90%;
+  background: pink;
+  display: flex;
+  flex-direction: column-reverse;
+}
+.chat-input{
+  width: 100%;
+  height: 9.5%;
+  background: blueviolet;
+}
+.chat-input input{
+  width: 98%;
+  height: 97%;
 }
