--- a/src/scss/Join.scss
+++ b/src/scss/Join.scss
@@ -1,27 +1,35 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
 //@import "common";
-/*body{
-  font-family: 'Jua', sans-serif;
-}*/
 
-.join-screen{
-  width: 100%; height: 100vh;
-  padding: 2rem 0;
+.join-main-content{
+  width: 100%;
+  height: 100vh;
+  padding: 4rem 0;
   display: flex; justify-content: center;
-  background: #000;
+  background: #252525;
   /*background-image: url("./img/background-img.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;*/
 
-  .join-main-content{
+  .join-container{
     display: flex;
     //flex-flow: row nowrap;
     //margin: 75px 20px 0;
-
-
   }
+
+  // 950 이상
+  @media only screen and (min-height: 950px) {
+    //background-color: #61dafb;
+    height: 100vh;
+  }
+
+  // 950 이하
+  @media only screen and (max-height: 950px) {
+    //background-color: red;
+    height: 60rem;
+  }
+
 }
 
 
