--- a/src/scss/JoinLeft.scss
+++ b/src/scss/JoinLeft.scss
@@ -3,9 +3,9 @@
 
 
 
-.left-login-move{
-  width: 28rem;
-  padding: 2rem;
+.join-left{
+  width: 30rem;
+  padding: 3rem;
 
   background: #00000080;
   border: 1px solid #D9D9D9; border-radius: 10px 0 0 10px;
@@ -18,27 +18,16 @@
 
     .h1-join-title{
       font-weight: bold;
-      font-size: 2rem;
+      font-size: 3.5rem;
+      text-transform: uppercase;
     }
 
     .h2-join-sub-title{
-      margin-top: 1rem;
+      margin-top: 2rem;
+      line-height: 2rem;
     }
 
   }
 
-  .if-login-can-user {
-    display: flex; flex-flow: column wrap;
-    justify-content: space-between;
-    color: #ffffff;
-
-    .login-link-move{
-      text-decoration: none;
-      outline: none;
-      color: #3FFEAE; font-weight: bold;
-      font-size: 1.2rem;
-    }
-
-  }
 
 }
