--- a/src/scss/JoinRight.scss
+++ b/src/scss/JoinRight.scss
@@ -2,34 +2,94 @@
 
 
 
-.join-right-input-modal{
+.join-right-item{
   background: #ffffff;
   border: 1px solid #D9D9D9;
   border-radius: 0 10px 10px 0;
+
   width: 30rem;
+  height: 100%;
   padding: 2rem;
+
+  display: flex; flex-flow: column wrap;
+  justify-content: space-between;
 
   .join-input-profile-item{
     background: #D9D9D9;
     border-radius: 50%;
+
     width: 10rem; height: 10rem;
+    overflow: hidden;
 
     display: flex; justify-content: center; align-items: center;
-    overflow: hidden;
   }
 
   .join-input-items{
-    margin: 2rem 0;
 
-    .join-input-item{
+    .join-item{
       display: flex; flex-flow: column wrap;
-      margin-bottom: 1rem;
+      margin: 2rem 1rem;
 
-      button{
-        background: #ffffff;
-        border: 1px solid #D9D9D9;
-        color: #D9D9D9;
+      .join-input{
+         font-weight: bold;
       }
+
+      .error-message{
+        color: #ff2e2e;
+
+        &.nn{
+          color: #1ddc8c;
+        }
+
+        &.id{
+          color: #1ddc8c;
+        }
+
+        &.pw{
+          color: #1ddc8c;
+        }
+
+        &.pwc{
+          color: #1ddc8c;
+        }
+
+      }
+
+    }
+
+  }
+
+  .join-practice{
+    background: #3FFEAE;
+    border: 0;
+
+    color: #000000;
+    font-weight: bold; font-size: 1.2rem;
+
+    width: 25rem;
+    padding: 1rem 0;
+
+    &.lock{
+      border: 1px solid #D9D9D9;
+      color: #D9D9D9;
+      background: #ffffff;
     }
   }
+
+
+  .if-login-can-user {
+    display: flex; flex-flow: column wrap;
+    justify-content: space-between;
+    color: #000000;
+    margin-top: 1rem;
+
+    .login-link-move{
+      text-decoration: none;
+      outline: none;
+      color: #3FFEAE; font-weight: bold;
+      font-size: 1.2rem;
+    }
+
+  }
+
 }
