--- a/src/scss/Join.scss
+++ b/src/scss/Join.scss
@@ -4,29 +4,26 @@
 .join-main-content{
   width: 100%;
   height: 100vh;
-  padding: 4rem 0;
+  padding: 2rem 0;
   display: flex; justify-content: center;
   background: #252525;
-  /*background-image: url("./img/background-img.jpg");
+
+  /*background-image: url("./img/background-img.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;*/
 
   .join-container{
-    display: flex;
-    //flex-flow: row nowrap;
-    //margin: 75px 20px 0;
+    display: flex; flex-flow: row nowrap;
   }
 
   // 950 이상
   @media only screen and (min-height: 950px) {
-    //background-color: #61dafb;
     height: 100vh;
   }
 
   // 950 이하
   @media only screen and (max-height: 950px) {
-    //background-color: red;
     height: 60rem;
   }
 
