--- a/src/scss/JoinLeft.scss
+++ b/src/scss/JoinLeft.scss
@@ -5,29 +5,50 @@
 
 .join-left{
   width: 30rem;
-  padding: 3rem;
+  position: relative;
 
-  background: #00000080;
-  border: 1px solid #D9D9D9; border-radius: 10px 0 0 10px;
+  .left-container{
+    width: 100%; height: 100%;
+    padding: 3rem;
 
-  display: flex; flex-flow: column wrap;
-  justify-content: space-between;
+    background: #00000030;
+    border: 1px solid #D9D9D9; border-radius: 10px 0 0 10px;
 
-  .join-introductory-article{
-    color: #ffffff;
+    display: flex; flex-flow: column wrap;
+    justify-content: space-between;
 
-    .h1-join-title{
-      font-weight: bold;
-      font-size: 3.5rem;
-      text-transform: uppercase;
-    }
+    position: relative;
+    z-index: 3;
 
-    .h2-join-sub-title{
-      margin-top: 2rem;
-      line-height: 2rem;
+    .join-introductory-article{
+      color: #ffffff;
+
+      .h1-join-title{
+        font-weight: bold;
+        font-size: 3.5rem;
+        text-transform: uppercase;
+      }
+
+      .h2-join-sub-title{
+        margin-top: 2rem;
+        line-height: 2rem;
+      }
+
     }
 
   }
 
+  .background-img{
+    position: absolute;
+    z-index: 2;
+
+    width: 100%;
+    height: 100%;
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
 
 }
+
