--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -40,6 +40,8 @@ html,body{
   height: 100%;
   background: #61dafb;
   border: 1px solid black;
+  display: flex;
+
 }
 .create{
   position: absolute;
@@ -72,4 +74,36 @@ html,body{
 .chat-input input{
   width: 98%;
   height: 97%;
+}
+.l-a{
+  width: 60%;
+  height: 100%;
+  background: #282c34;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+.p-img{
+  width: 80%;
+  height: 60%;
+  background: #fff9f9;
+  border-radius: 100px;
+}
+.p-img img{
+  width: 100%;
+  height: 100%;
+  border-radius: 100px;
+}
+// 닉네임 스타일 추가 예정
+.p-img nick-name{
+
+}
+.score{
+  width: 40%;
+  height: 100%;
+background: #78c7d2;
+  font-size: 40px;
+  display: flex;
+  align-items: center;
 }
