--- a/src/user/scss/Login.scss
+++ b/src/user/scss/Login.scss
@@ -6,7 +6,7 @@ $font-size: 16px;
 .sign-in-full-screen{
   width: 100%;
 
-  background: url("./img/UserLoginBackGround.png");
+  background: url("img/UserLoginBackGround.png");
   /*background-repeat: no-repeat;
   background-size: cover;
   background-position: center;*/
@@ -29,7 +29,7 @@ $font-size: 16px;
 
       .LONI-QUIZ-logo{
         width: 225px; height: 160px;
-        background: url("./img/LOINQUIZ_logo.png") no-repeat;
+        background: url("img/LOINQUIZ_logo.png") no-repeat;
 
         margin: 0 auto;
       }
