--- a/src/component/scss/GameLobby.scss
+++ b/src/component/scss/GameLobby.scss
@@ -42,6 +42,7 @@ body {
         height: 100%;
         border-radius: 100px;
         object-fit: cover;
+        cursor:pointer;
       }
     }
 
@@ -49,6 +50,7 @@ body {
       font-weight: 700;
       font-size: 25px;
       text-align: center;
+      cursor:pointer;
     }
   }
 }
@@ -89,6 +91,7 @@ body {
       border: none;
       transition: all 0.2s ease-in-out;
       font-size: 20px;
+      cursor:pointer;
       &:hover {
         background-color: #cc01cc;
         color: #FFFFFF;
@@ -120,6 +123,7 @@ body {
       background-color: #ff0000;
       border: none;
       transition: all 0.2s ease-in-out;
+      cursor:pointer;
       &:hover {
         background-color: #ff5858;
         color: #FFFFFF;
