--- a/src/user/scss/UserSideLeft.scss
+++ b/src/user/scss/UserSideLeft.scss
@@ -1,10 +1,10 @@
 
 
-
+@import "common";
 
 
 .join-left{
-  width: 30rem;
+  width: 30rem; height: 100%;
   position: relative;
 
   .left-container{
