로비 색상 디자인 변경
색 조합이 영 아니어서 일단 대충 수정해봄.

--- a/src/component/css/GameLobby.css
+++ b/src/component/css/GameLobby.css
@@ -67,7 +67,7 @@ textarea {
 }
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background-color: #5E6578;
+    background-color: #33186B;
 }
 ::-webkit-scrollbar-button {
     width: 0;
