--- a/src/user/scss/JoinRight.scss
+++ b/src/user/scss/JoinRight.scss
@@ -16,11 +16,15 @@
   justify-content: space-between;
 
   .join-input-profile-item{
-    background: #D9D9D9;
+    //background: #D9D9D9;
     border-radius: 50%;
 
     width: 10rem; height: 10rem;
     overflow: hidden;
+
+    //background-repeat: no-repeat;
+    //background-size: contain;
+    //background-position: center;
 
     display: flex; justify-content: center; align-items: center;
   }
