--- a/src/component/main/scss/Main.scss
+++ b/src/component/main/scss/Main.scss
@@ -34,14 +34,16 @@ body{
 
 .logo{
   color: white;
-  font-size: 100px;
+  font-size: 120px;
+  font-weight: bold;
+  margin: 60px 0 100px 0;
 }
 
 .l-g p{
   color: white;
   font-size: 30px;
   width: 870px;
-  margin-bottom: 3em;
+  margin-bottom: 6em;
 }
 .middle{
   width: 100%;
@@ -157,7 +159,7 @@ body{
 }
 
 .content-title{
-  margin-top: 70px;
+  margin: 50px 0 30px 0;
   text-align: center;
   font-size: 43px;
 }
