--- a/src/user/scss/LoginRight.scss
+++ b/src/user/scss/LoginRight.scss
@@ -26,13 +26,14 @@
     .login-id-item
     , .login-password-item
     {
-      background: #efefef;
+      background: #FFFFFF;
 
       display: flex; align-items: center;
 
-      border: 2px solid #545454;
+      border: 2px solid #D9D9D9;
       border-radius: 10px;
 
+      margin: 1rem 0 0;
       padding: 0.5rem 0.8rem;
 
       .id-icon
@@ -53,14 +54,16 @@
     }
 
     .auto-login-check{
-
+      color: #D9D9D9;
+      margin: 0.5rem 0;
     }
 
     .login-state-item{
 
       .user-login-button{
         width: 100%; padding: 1rem 0;
-        background: #D9D9D9;
+        background: #3FFEAE;
+        //border: 2px solid #D9D9D9;
 
         color: #000000;
         font-size: 1.5rem; font-weight: bold;
