사진 출력 완료
디자인 수정중.

--- a/src/component/scss/GameBbox1.scss
+++ b/src/component/scss/GameBbox1.scss
@@ -6,7 +6,7 @@
 
   .profile {
     border-radius: 20px 0 0 0px;
-    background-color: #40128B;
+    background-color: #d1b8fb;
     width: 204px;
     height: 320px;
     flex: 0 1 auto;
@@ -56,7 +56,7 @@
     .Rank_list{
       height: 100%;
       overflow-y: scroll;
-      margin: 20px;
+      margin: 5px;
       li {
         position: relative;
         .User_Ranking_box {
