--- a/src/component/scss/GameLobby.scss
+++ b/src/component/scss/GameLobby.scss
@@ -2,14 +2,16 @@
 body {
   overflow-x: hidden;
 }
+
 .z{
-  margin-top: 100px;
+  //margin-top: 100px;
 }
 
 .aa{
-  width: 2000px;
-  height: 1000px;
+  width: 100%;
+  height: 100vh;
   background-image: url("https://image.civitai.com/xG1nkqKTMzGDvpLrqFT7WA/932b2694-3e14-4c9a-a9a5-822f630fa050/original=true/00192-1996601262.jpeg");
+  padding-top: 70px;
 }
 
 .lobby_container {
