--- a/src/component/main/scss/Header.scss
+++ b/src/component/main/scss/Header.scss
@@ -4,9 +4,15 @@
   justify-content: center;
   align-items: center;
 }
+
+.header-table li{
+  margin-right: 30px;
+}
+
 .h-box{
   width: 100%;
   display: flex;
+  justify-content: space-between;
 }
 
 .h-box img{
@@ -27,6 +33,4 @@ h2{
 }
 .header{
   display: flex;
-  justify-content: center;
-  margin: 0 auto;
 }
