자기전 커밋

--- a/src/component/main/scss/Main.scss
+++ b/src/component/main/scss/Main.scss
@@ -188,3 +188,15 @@ footer{
   position : absolute;
   bottom: 0;
 }
+
+// 스크롤 이벤트 테스트용 css
+.scroll-text {
+  font-size: 5rem;
+  transition: 1.5s;
+}
+
+.scrolled-text {
+  font-size: 5rem;
+  color: red;
+  transition: 1.5s;
+}
