--- a/src/component/css/GameLobby.css
+++ b/src/component/css/GameLobby.css
@@ -37,7 +37,7 @@ textarea {
 }
 
 .chat-container {
-    height: 350px;
+    height: 265px;
     margin-left: auto;
     margin-right: auto;
     background-color: #fff;
@@ -82,9 +82,9 @@ textarea {
     background-color: #FFF;
     overflow: auto;
     overflow-y: scroll;
-    padding: 13px 20px 0px 20px; /* 여기서 마지막 값인 10px를 조정하여 간격을 조절할 수 있습니다. */
-    height: calc(100% - 150px);
-    margin-bottom: 0px;
+    padding: 13px 20px 0px 20px;
+    height: calc(100% - 90px);
+    margin-bottom: 0;
 }
 
 #chat-page ul li {
@@ -131,7 +131,7 @@ textarea {
 
 #messageForm .input-group input {
     float: left;
-    width: calc(100% - 85px);
+    width: 100%;
 }
 
 #messageForm .input-group button {
