--- a/src/component/main/scss/Main.scss
+++ b/src/component/main/scss/Main.scss
@@ -1,3 +1,21 @@
+body{
+  margin: 0;
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+
+.inner{
+
+}
+
+.outer{
+  overflow-y: auto;
+}
+/* 화면에서 스크롤바 안보이게 */
+.outer::-webkit-scrollbar {
+  display: none;
+}
+
 .section{
   width: 100%;
   height: 100vh;
@@ -25,14 +43,6 @@
   display: flex;
   flex-direction: row;
 }
-
-.l-g{
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .logo{
   color: white;
   font-size: 120px;
