--- a/src/user/scss/UserInfo.scss
+++ b/src/user/scss/UserInfo.scss
@@ -71,15 +71,18 @@
             border-radius: 50%;
             margin-right: 1rem;
             display: flex; align-items: center; justify-content: center;
-            background: #D9D9D9;
-            color: #868686;
+            //background: #D9D9D9;
+            //color: #868686;
+            color: #D9D9D9;
 
 
             &.login-state-icon{
               height: 4rem;
               width: 4rem;
               font-size: 3rem;
-              background: linear-gradient(180deg, rgba(207,130,255,1) 30%, rgba(255,100,165,1) 100%);
+              //background: #9A95E2;
+              //background: linear-gradient(180deg, rgba(207,130,255,1) 30%, rgba(255,100,165,1) 100%);
+              //background: #00000000;
               border-radius: 50%;
               margin-right: 1rem;
               display: flex; align-items: center; justify-content: center;
@@ -92,8 +95,11 @@
                 content: "";
                 position: absolute;
                 height: 4rem; width: 4rem;
-                background: linear-gradient(180deg, rgba(207,130,255,1) 30%, rgba(255,100,165,1) 100%);
-                filter: blur(10px);
+                //background: #9A95E290;
+                background: red;
+                //background: linear-gradient(180deg, rgba(207,130,255,1) 30%, rgba(255,100,165,1) 100%);
+                //background: #ff2e2e50;
+                filter: blur(7px);
                 -webkit-filter: blur(10px);
                 border-radius: 50%;
               }
