--- a/src/user/scss/LoginRight.scss
+++ b/src/user/scss/LoginRight.scss
@@ -56,6 +56,11 @@
     .auto-login-check{
       color: #D9D9D9;
       margin: 0.5rem 0;
+
+      &.autoLogin{
+        color: #333333;
+      }
+
     }
 
     .login-state-item{
