메인 시작 커밋

--- a/src/component/main/scss/Main.scss
+++ b/src/component/main/scss/Main.scss
@@ -6,7 +6,11 @@ body{
 }
 
 .inner{
-
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 100px;
 }
 
 .outer{
