--- a/src/component/main/scss/Main.scss
+++ b/src/component/main/scss/Main.scss
@@ -170,7 +170,7 @@ body{
 
 .content-box{
   margin-bottom: 80px;
-  padding-top: 60px;
+  padding-top: 100px;
 }
 .content-box p{
   text-align: center;
@@ -180,6 +180,7 @@ body{
 .content-title{
   text-align: center;
   font-size: 43px;
+  padding-bottom: 30px;
 }
 
 // bottom-box
