Don't touch (공사중)

--- a/src/component/scss/GameBbox1.scss
+++ b/src/component/scss/GameBbox1.scss
@@ -21,7 +21,7 @@
       background-image: linear-gradient(#444, #444), linear-gradient(to left,#37a9fa,#5951f3);
       background-clip: content-box, border-box;
       background-origin: border-box;
-      animation: huerotate 6s infinite linear;
+      //animation: huerotate 6s infinite linear;
       img {
         width: 100%;
         height: 100%;
