--- a/src/user/scss/UserInfo.scss
+++ b/src/user/scss/UserInfo.scss
@@ -6,6 +6,10 @@
   background: #151422;
   padding: 3% 0;
 
+  display: flex; flex-wrap: wrap;
+  align-content: space-between;
+
+
   .lobby-move-button{
     background: linear-gradient(180deg, rgba(51,48,80,1) 0%, rgba(21,20,34,1) 100%);
     border: 2px solid #716E98; border-radius: 3rem;
@@ -13,7 +17,7 @@
     font-size: 1.8rem;
     display: flex;
     align-items: center;
-    margin: 0 2rem 2rem;
+    margin: 2rem 2rem;
     padding: 0.5rem 2rem;
   }
 
