--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -54,8 +54,8 @@ html,body{
   bottom: 20px;
 }
 .img{
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
   border: 1px solid black;
   margin-right: 30px;
 }
@@ -110,4 +110,40 @@ html,body{
   font-size: 40px;
   display: flex;
   align-items: center;
+}
+
+// 모달 css
+.btn-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 5rem;
+}
+
+.modal-open-button, .modal-close-btn {
+  cursor: pointer;
+  margin-left: auto;
+}
+
+.modal-container {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  background-color: #ffffff;
+  width: 250px;
+  height: 150px;
+  padding: 15px;
+}
+
+.showImg{
+  width: 300px;
+  height: 300px;
 }
