스타일 충돌 방지를 위해 모달 스타일 sx로 변경
작업할 때 mui에서 가져온 모달, 박스는 되도록 sx로 하고, 클래스 이름을 지정할 수 있다면 따로 지정해서 디자인을 수정할 것.

--- a/src/component/scss/GameFooter.scss
+++ b/src/component/scss/GameFooter.scss
@@ -1,4 +1,6 @@
-.footer_container {
+.footer-container {
   width: 100%;
   background-color: #9A95E2;
+  display: flex;
+  justify-content: space-between;
 }
