--- a/src/component/scss/GameBbox1.scss
+++ b/src/component/scss/GameBbox1.scss
@@ -1,14 +1,10 @@
 .lobby_bbox1 {
   display: flex;
   flex-direction: column;
-  width: 20%;
-  height:auto;
 
   .profile {
-    border-radius: 20px 0 0 0px;
     background-color: #A48FB8;
-    width: 204px;
-    height: 320px;
+    height: 100%;
     flex: 0 1 auto;
 
     .profile_image{
@@ -16,12 +12,10 @@
       height: 150px;
       border-radius: 100px;
       margin: 30px;
-      filter: hue-rotate(360deg);
       border: 3px solid transparent;
       background-image: linear-gradient(#444, #444), linear-gradient(to left,#37a9fa,#5951f3);
       background-clip: content-box, border-box;
       background-origin: border-box;
-      //animation: huerotate 6s infinite linear;
       img {
         width: 100%;
         height: 100%;
@@ -73,14 +67,5 @@
         }
       }
     }
-  }
-}
-
-@keyframes huerotate {
-  0% {
-    filter: hue-rotate(0deg);
-  }
-  100% {
-    filter: hue-rotate(360deg);
   }
 }
