--- a/src/component/scss/GameModal.scss
+++ b/src/component/scss/GameModal.scss
@@ -1,22 +1,11 @@
-.css-79ws1d-MuiModal-root {
+.create_box{
   display: flex;
   justify-content: center;
   height: 450px;
   margin-top: 200px;
-
-}
-
-.css-104bpzz {
-  text-align: center;
-  border-radius: 30px;
-
   h2 {
     font-size: 30px;
     font-weight: 400;
     margin-bottom: 20px;
-  }
-
-  .css-1u3bzj6-MuiFormControl-root-MuiTextField-root {
-    margin-bottom: 10px;
   }
 }
