프로필 사진 누를 시 mypage연결(임시)
-Friend 모달 구성 추가(지금은 input만 있음)
-바깥에 검색창 하나 만들기(list에 넣을 예정)
-버튼 디자인 수정 필요

--- a/src/component/scss/GameModal.scss
+++ b/src/component/scss/GameModal.scss
@@ -9,3 +9,11 @@
     margin-bottom: 20px;
   }
 }
+.ranking_box{
+  height: 450px;
+  margin-top: 200px;
+}
+.friends_box{
+  height: 450px;
+  margin-top: 200px;
+}
