--- a/src/component/scss/GameLobby.scss
+++ b/src/component/scss/GameLobby.scss
@@ -16,7 +16,7 @@ body {
 
 .lobby_container {
   display: flex;
-  justify-content: center;
+  height: 85vh;
 }
 
 .lobby_box1 {
@@ -96,7 +96,7 @@ body {
 .lobby_box2 {
   float: left;
   background-color: #61689F;
-  width: 70%;
+  width: 100%;
   height: auto;
   overflow: hidden;
 
