--- a/src/component/scss/GameLobby.scss
+++ b/src/component/scss/GameLobby.scss
@@ -100,6 +100,12 @@ body {
   height: auto;
   overflow: hidden;
 
+  .lobby_search_room_box {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+  }
+
   .room_list {
     width: 100%;
     height: 400px;
