--- a/src/component/gamepage/scss/GamePage.scss
+++ b/src/component/gamepage/scss/GamePage.scss
@@ -77,7 +77,7 @@
 .l-a{
   width: 60%;
   height: 100%;
-  background: #282c34;
+  background: #FDD9DD;
   display: flex;
   flex-direction: column;
   align-items: center;
